# sphincsplus

./: .gitignore  Cargo.toml  LICENSE-MIT  contributing.md  modify.sh  readme.md
.github/workflows/: ci.yml
KAT/: Makefile  PQCgenKAT_sign.c  build_kat.sh
haraka_128f_robust/: Cargo.toml
haraka_128f_robust/tests/: kat.rs
haraka_128f_simple/: Cargo.toml
haraka_128f_simple/tests/: kat.rs
haraka_128s_robust/: Cargo.toml
haraka_128s_robust/tests/: kat.rs
haraka_128s_simple/: Cargo.toml
haraka_128s_simple/tests/: kat.rs
haraka_192f_robust/: Cargo.toml
haraka_192f_robust/tests/: kat.rs
haraka_192f_simple/: Cargo.toml
haraka_192f_simple/tests/: kat.rs
haraka_192s_robust/: Cargo.toml
haraka_192s_robust/tests/: kat.rs
haraka_192s_simple/: Cargo.toml
haraka_192s_simple/tests/: kat.rs
haraka_256f_robust/: Cargo.toml
haraka_256f_robust/tests/: kat.rs
haraka_256f_simple/: Cargo.toml
haraka_256f_simple/tests/: kat.rs
haraka_256s_robust/: Cargo.toml
haraka_256s_robust/tests/: kat.rs
haraka_256s_simple/: Cargo.toml
haraka_256s_simple/tests/: kat.rs
sha2_128f_robust/: Cargo.toml
sha2_128f_robust/tests/: kat.rs
sha2_128f_simple/: Cargo.toml
sha2_128f_simple/tests/: kat.rs
sha2_128s_robust/: Cargo.toml
sha2_128s_robust/tests/: kat.rs
sha2_128s_simple/: Cargo.toml
sha2_128s_simple/tests/: kat.rs
sha2_192f_robust/: Cargo.toml
sha2_192f_robust/tests/: kat.rs
sha2_192f_simple/: Cargo.toml
sha2_192f_simple/tests/: kat.rs
sha2_192s_robust/: Cargo.toml
sha2_192s_robust/tests/: kat.rs
sha2_192s_simple/: Cargo.toml
sha2_192s_simple/tests/: kat.rs
sha2_256f_robust/: Cargo.toml
sha2_256f_robust/tests/: kat.rs
sha2_256f_simple/: Cargo.toml
sha2_256f_simple/tests/: kat.rs
sha2_256s_robust/: Cargo.toml
sha2_256s_robust/tests/: kat.rs
sha2_256s_simple/: Cargo.toml
sha2_256s_simple/tests/: kat.rs
shake_128f_robust/: Cargo.toml
shake_128f_robust/tests/: kat.rs
shake_128f_simple/: Cargo.toml
shake_128f_simple/tests/: kat.rs
shake_128s_robust/: Cargo.toml
shake_128s_robust/tests/: kat.rs
shake_128s_simple/: Cargo.toml
shake_128s_simple/tests/: kat.rs
shake_192f_robust/: Cargo.toml
shake_192f_robust/tests/: kat.rs
shake_192f_simple/: Cargo.toml
shake_192f_simple/tests/: kat.rs
shake_192s_robust/: Cargo.toml
shake_192s_robust/tests/: kat.rs
shake_192s_simple/: Cargo.toml
shake_192s_simple/tests/: kat.rs
shake_256f_robust/: Cargo.toml
shake_256f_robust/tests/: kat.rs
shake_256f_simple/: Cargo.toml
shake_256f_simple/tests/: kat.rs
shake_256s_robust/: Cargo.toml
shake_256s_robust/tests/: kat.rs
shake_256s_simple/: Cargo.toml
shake_256s_simple/tests/: kat.rs
sphincsplus/: Cargo.toml
sphincsplus/src/: context.rs  fips202.rs  fors.rs  lib.rs  merkle.rs  params.rs  sign.rs  wotsx1.rs
sphincsplus/src/hash/: shake.rs
sphincsplus/src/offsets/: haraka.rs  sha2.rs
sphincsplus/src/params/: f128.rs  f192.rs  f256.rs  s128.rs  s192.rs  s256.rs
sphincsplus/src/thash/: haraka_robust.rs  haraka_simple.rs  sha2_robust.rs  sha2_simple.rs  shake_robust.rs  shake_simple.rs
sphincsplus/tests/: kat.rs
src/: address.rs  api.rs  context.rs  fors.rs  haraka.rs  hash.rs  hash_haraka.rs  hash_shake.rs  lib.rs  merkle.rs  offsets.rs  params.rs  randombytes.rs  sha2.rs  sign.rs  thash.rs  thash_haraka_robust.rs  thash_haraka_simple.rs  thash_shake_robust.rs  thash_shake_simple.rs  utils.rs  utilsx1.rs  wots.rs  wotsx1.rs
src/hash/: haraka.rs  hash_haraka.rs  hash_sha2.rs  hash_shake.rs  sha2.rs  shake.rs
src/offsets/: haraka.rs  sha2.rs  shake.rs
src/params/: f128.rs  f192.rs  f256.rs  s128.rs  s192.rs  s256.rs
src/thash/: haraka_robust.rs  haraka_simple.rs  sha2_robust.rs  sha2_simple.rs  shake_robust.rs  shake_simple.rs  thash_haraka_simple.rs  thash_sha2_robust.rs  thash_sha2_simple.rs  thash_shake_robust.rs  thash_shake_simple.rs
tests/: PQCgenKAT_sign.c  build_kat_files.sh  kat.rs  readme.md  run_all_tests.sh  signverify.rs  test_matrix.sh
tests/KAT/: PQCsignKAT_sphincs-haraka-128f-robust.rsp  PQCsignKAT_sphincs-haraka-128f-simple.rsp  PQCsignKAT_sphincs-haraka-128s-robust.rsp  PQCsignKAT_sphincs-haraka-128s-simple.rsp  PQCsignKAT_sphincs-haraka-192s-robust.rsp  PQCsignKAT_sphincs-haraka-192s-simple.rsp  PQCsignKAT_sphincs-sha2-128f-THASH.rsp  PQCsignKAT_sphincs-sha2-128f-robust.rsp  PQCsignKAT_sphincs-sha2-128f-simple.rsp  PQCsignKAT_sphincs-sha2-128s-THASH.rsp  PQCsignKAT_sphincs-sha2-128s-simple.rsp  PQCsignKAT_sphincs-sha2-192s-robust.rsp  PQCsignKAT_sphincs-sha2-192s-simple.rsp  PQCsignKAT_sphincs-shake-128f-robust.rsp  PQCsignKAT_sphincs-shake-128f-simple.rsp  PQCsignKAT_sphincs-shake-128s-robust.rsp  PQCsignKAT_sphincs-shake-128s-simple.rsp  PQCsignKAT_sphincs-shake-192s-robust.rsp  PQCsignKAT_sphincs-shake-192s-simple.rsp  SeedBufferKeygen_48  SeedBufferKeygen_72  SeedBufferKeygen_96  SeedBufferSign_16  SeedBufferSign_24  SeedBufferSign_32
variants/: Cargo.toml
variants/haraka_128f_robust/: Cargo.toml
variants/haraka_128f_simple/: Cargo.toml
variants/haraka_128s_robust/: Cargo.toml
variants/haraka_128s_simple/: Cargo.toml
variants/haraka_192f_robust/: Cargo.toml
variants/haraka_192f_simple/: Cargo.toml
variants/haraka_192s_robust/: Cargo.toml
variants/haraka_192s_simple/: Cargo.toml
variants/haraka_256f_robust/: Cargo.toml
variants/haraka_256f_simple/: Cargo.toml
variants/haraka_256s_robust/: Cargo.toml
variants/haraka_256s_simple/: Cargo.toml
variants/sha2_128f_robust/: Cargo.toml
variants/sha2_128f_simple/: Cargo.toml
variants/sha2_128s_robust/: Cargo.toml
variants/sha2_128s_simple/: Cargo.toml
variants/sha2_192f_robust/: Cargo.toml
variants/sha2_192f_simple/: Cargo.toml
variants/sha2_192s_robust/: Cargo.toml
variants/sha2_192s_simple/: Cargo.toml
variants/sha2_256f_robust/: Cargo.toml
variants/sha2_256f_simple/: Cargo.toml
variants/sha2_256s_robust/: Cargo.toml
variants/sha2_256s_simple/: Cargo.toml
variants/shake_128f_robust/: Cargo.toml
variants/shake_128f_simple/: Cargo.toml
(+11 files in other folders)
