[workspace]
resolver = "2"
members = [
  "sphincsplus",
  "haraka_128f_simple",
  "haraka_128s_robust",
  "haraka_128s_simple",
  "haraka_192f_robust",
  "haraka_192f_simple",
  "haraka_192s_robust",
  "haraka_192s_simple",
  "haraka_256f_robust",
  "haraka_256f_simple",
  "haraka_256s_robust",
  "haraka_256s_simple",
  "sha2_128f_robust",
  "sha2_128f_simple",
  "sha2_128s_robust",
  "sha2_128s_simple",
  "sha2_192f_robust",
  "sha2_192f_simple",
  "sha2_192s_robust",
  "sha2_192s_simple",
  "sha2_256f_robust",
  "sha2_256f_simple",
  "sha2_256s_robust",
  "sha2_256s_simple",
  "shake_128f_robust",
  "shake_128f_simple",
  "shake_128s_robust",
  "shake_128s_simple",
  "shake_192f_robust",
  "shake_192f_simple",
  "shake_192s_robust",
  "shake_192s_simple",
  "shake_256f_robust",
  "shake_256f_simple",
  "shake_256s_robust",
  "shake_256s_simple",
]