[package]
name = "sphincs_sha2_128f_robust"
version = "0.1.0"
edition = "2021"
authors = ["Mitchell Berry <foss@mitchellberry.com>"]
description = "Sphincs+ is a post-quantum signature scheme"
readme = "readme.md"
repository = "https://github.com/Argyle-Software/pqc_sphincsplus"
license = "MIT OR Apache-2.0"
categories = ["algorithms", "cryptography"]
keywords = ["sphincsplus", "sphincs+", "sphincs", "signature", "post-quantum"]

[dependencies]
pqc_core = {version = "0.1.0", path = "../../pqc_core"}
pqc_sphincsplus = { version = "0.1.0", path = "../sphincsplus", features = ["sha2", "f128", "robust"]}